examples/errors/esem1.c
int main ()
{
	int e1, e2, e3;
	
	e1 = (e2 * e2);
	
	e3 = e1 * e4;
}

